minecraft.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: minecraft
