nginx.yml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-controller
  namespace: nginx
  labels:
    k8s-app: nginx-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: nginx-lb
        name: nginx-lb
    spec:
      serviceAccountName: nginx-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: nginx
        name: nginx-lb
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: nginx-persistent-storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-persistent-storage
        persistentVolumeClaim:
          claimName: nginx-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    k8s-app: nginx-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx
spec:
  selector:
    k8s-app: nginx-lb
  ports:
  - port: 80
    targetPort: 80
