nginx-test.yml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: nginx-controller
  namespace: kube-system
  labels:
    k8s-app: nginx-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: nginx-lb
        name: nginx-lb
    spec:
      serviceAccountName: nginx-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: nginx
        name: nginx-lb
        ports:
        - name: http
          containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: kube-system
spec:
  selector:
    k8s-app: nginx-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: kube-system
spec:
  selector:
    k8s-app: nginx-lb
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.zengarden.se
    http:
      paths:
      - backend:
          serviceName: nginx-test
          servicePort: 80
